test/spec_vectors/store/fail/module_10.wat
(module (memory 1) (func (param f32) (result f32) (f32.store (i32.const 0) (f32.const 1))))